# SpatialNavigationCUDA

./: .gitignore  .mainNaive.cu.swp  .parameters.h.swp  CMakeCache.txt  CMakeLists (MacBook's conflicted copy 2016-08-18).txt  CMakeLists.txt  Driver  Driver.cu  Driver2D.cu  EventDrivenMap.cu  EventDrivenMap.cw~  EventDrivenMap.cy~  EventDrivenMap.hpp  EventDrivenMap2D.cu  EventDrivenMap2D.hpp  EventDrivenMapAug15.cu  EventDrivenMapAug18.cu  EventDrivenMapAug18.hpp  EventDrivenMapAug19.cu  EventDrivenMapAug31.cu  Makefile  Makefile2D  MakefileBackup  README.md  cmake_install.cmake  mainNaive.cu  mainNaive.h  mainNaiveBackup.cu  parameters.h
CPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  parameters.h
MATLAB/: Driver.m  IFfun.m  IFfunSteve.m  UpdateStateZone1.m  UpdateStateZone2.m  UpdateStateZone3.m  checkEvents.m  checkParameterScalings.m  createStencil.m  findSteadyState.m  networkPropagator.m  pow.m
MATLAB/Mayte/: IF_interp.m  RK2multi.m  dVdt.m  dn_hdt.m  dudt.m  dydt.m  new4.mat
Visualisation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Visualisation/src/: CMakeLists.txt  Makefile  cmake_install.cmake  testVisualisationMoving.cu
